--- a/HelloOBP-Mac/Res/Base.lproj/MainMenu.xib
+++ b/HelloOBP-Mac/Res/Base.lproj/MainMenu.xib
@@ -19,11 +19,11 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="Hello-OBP-OAuth1.0a-Mac" id="1Xt-HY-uBw">
+                <menuItem title="HelloOBP-Mac" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Hello-OBP-OAuth1.0a-Mac" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="HelloOBP-Mac" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About Hello-OBP-OAuth1.0a-Mac" id="5kV-Vb-QxS">
+                            <menuItem title="About HelloOBP-Mac" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -37,7 +37,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide Hello-OBP-OAuth1.0a-Mac" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide HelloOBP-Mac" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -55,7 +55,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit Hello-OBP-OAuth1.0a-Mac" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit HelloOBP-Mac" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -656,7 +656,7 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="Hello-OBP-OAuth1.0a-Mac Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="HelloOBP-Mac Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                 <connections>
                                     <action selector="showHelp:" target="-1" id="y7X-2Q-9no"/>
                                 </connections>
@@ -666,7 +666,7 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="Hello-OBP-OAuth1.0a-Mac" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="HelloOBP-Mac" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="360"/>
